fix: overflow-x hidden;

--- a/css/communityWrite.css
+++ b/css/communityWrite.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   background-image: url(../img/main-frame.png);
   background-size: cover;
+  overflow-x: hidden;
 }
 
 .container-fluid {
